samples/_failures_safe/1761320539_94945a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b53bd46.c: In function ‘main’:
./samples/SAFE/__tmp_6b53bd46.c:156:32: error: expected ‘)’ at end of input
  156 |         if (scanf("%d", &choice
      |                  ~             ^
      |                                )
./samples/SAFE/__tmp_6b53bd46.c:156:9: error: expected declaration or statement at end of input
  156 |         if (scanf("%d", &choice
      |         ^~
./samples/SAFE/__tmp_6b53bd46.c:156:9: error: expected declaration or statement at end of input
